# riptide-plugin-php-xdebug

./: README.md  README.rst  pyproject.toml  requirements.txt  requirements_base.txt  requirements_dev.txt  setup.py
riptide_plugin_php_xdebug/: plugin.py
