[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "riptide-plugin-php-xdebug"
version = "0.10.1"
description = "Tool to manage development environments for web applications using containers - PHP Xdebug integration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Marco Köpcke", email = "hello@capypara.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "riptide-lib >= 0.10, < 0.11",
    "riptide-cli >= 0.10, < 0.11",
    "Click >= 8.2, < 9.0",
    "rich >= 14.1, < 15.0",
]

[project.urls]
Repository = "https://github.com/theCapypara/riptide-plugin-php-xdebug"
Documentation = "https://riptide-docs.readthedocs.io"

[project.entry-points."riptide.plugin"]
php-xdebug = "riptide_plugin_php_xdebug.plugin:PhpXdebugPlugin"

[tool.ruff]
line-length = 120

[tools.ruff.lint]
select = ["W", "E", "F", "ARG"]

[tool.mypy]
warn_unused_configs = true
mypy_path = "."
explicit_package_bases = true
namespace_packages = true
check_untyped_defs = true
